# parser_for_an_online_store

./: README.md  pyproject.toml
scraper/scraper/: settings.py  utils.py
scraper/scraper/spiders/: alkoteka_spider.py
